--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "4d1-node",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
+  "main": "index.mjs",
+  "scripts": {
+    "start": "npx nodemon index.mjs"
+  },
   "dependencies": {
+    "@fastify/formbody": "^7.3.0",
+    "@fastify/static": "^6.5.0",
     "fastify": "^4.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
